Address issue with the shadow for the apple and snake after clicking "reset" button and change font for the numbers for better readability.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&family=VT323&display=swap');
 
 body {
   background-color: black;
@@ -41,6 +41,7 @@ body {
   font-size: 100px;
   color: blue;
   flex: 1;
+  font-family: 'VT323', monospace;
 }
 
 #resetButton{
